--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thoughts at the park</title>
-  <meta name="description" content="A reflection on convictions.">
-  <meta name="author" content="Valeria Passarella">
+  <title>Session</title>
+
+  <meta name="author" content="Lorenzo Castrovilli">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
   <style>
@@ -14,7 +14,7 @@
         /*background-color: #FDD974;*/
         margin: 0;
         padding: 0;
-        background-image: url('img/360_F_302017497_ce40jP4IrFQJQFfc3NqIje1nzQ7q3yhW.jpg');
+        background-image: url('terapia-individuale-770x400.webp');
         background-size: cover;
         background-position: center;
         background-attachment: fixed
